package com.locadora.enums;

public enum StatusPedido {

    APROVADO,
    PENDENTE,
    CANCELADO;
}
