@startuml
skinparam classAttributeIconSize 0

package "Autenticador" #DDDDDD {

class Usuario{
-id:Long
-login:String
-senha:String
-role:Role

+login(login: String, senha: String): String
}

enum Role{
    CLIENTE
    AGENTE
}

Usuario -- Role
}

class Cliente{
 -id:Long
 -nome:String
 -RG:String
 -CPF:String
 -usuario:Usuario
 -profissao:Profissao
 -endereco:Endereco
 -rendimentosAuferidos: List<double>

 +cadastrar(cliente: Cliente): Cliente
}

class Endereco{
-id:Long
-CEP:String
-numero:int
-complemento:String
}

class Profissao{
-id:Long
-cargo:String
-empresa:String
-salario:double
}

class Automovel{
-id:Long
-matricula:String
-ano:String
-marca:String
-modelo:String
-placa:String
-proprietario: String
-disponivel: boolean

+vincularProprietario(novoProprietario: String): Automovel
+alterarDisponibilidade(disponivel: bololean): void
+verificarDisponibilidade(): boolean
}

class Contrato{
-id:Long
-valor:double
-pedido:Pedido

+gerarContrato(contrato: Contrato): Contrato
}

class ContratoDeCredito{
-id:Long
-totalParcelas:int
-parcelasPagas:int
}


class Pedido{
-id:Long
-data: Date
-automovel:Automovel
-cliente:Cliente
-status:StatusPedido
-avaliacao: AvaliacaoPedido

+introduzirPedido(idCliente: Long, idAutomovel: Long): Pedido
+modificarPedido(idPedido: Long, automovel: Automovel): Pedido
+consultarPedido(idPedido: Long): Pedido
+cancelarPedido(idPedido: Long): void
+avaliarPedido(idPedido: Long, status: StatusPedido): Pedido
}


enum StatusPedido{
    APROVADO
    PENDENTE
    CANCELADO
}

class AvaliacaoPedido{
-id:Long
-descricao: String
}

Pedido -- Cliente
Pedido -- Automovel
Pedido -- Contrato
Pedido -- StatusPedido
Pedido -- AvaliacaoPedido

Cliente -- Usuario
Cliente -- Profissao
Cliente *- Endereco

Contrato -- ContratoDeCredito

@enduml